--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -135,6 +135,10 @@ dependencies:
   rive: 0.11.11
   flutter_tts: ^4.2.0
   animated_flip_counter: ^0.3.4
+  bsdiff: 
+    git:
+      url: https://github.com/Livan-pro/dart-bsdiff.git
+      ref: main
   # Pangea#
 
 dev_dependencies:
