--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -32,7 +32,7 @@ plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "8.7.3" apply false
     id "org.jetbrains.kotlin.android" version "2.1.10" apply false
-    // id "com.google.gms.google-services" version "4.3.8" apply false
+    id "com.google.gms.google-services" version "4.3.8" apply false
 }
 
 include ":app"
