--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ RC_OFFERING_NAME = 'test'
 STRIPE_MANAGEMENT_LINK = 'https://billing.stripe.com/p/login/test_9AQaI8d3O9lmaXe5kk'
 
 SUPPORT_SPACE_ID = '!gqSNSkvwTpgumyjLsV:staging.pangea.chat'
+GOOGLE_API_KEY = 'AIzaSyD1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q'
