--- a/assets/.env
+++ b/assets/.env
@@ -1,8 +1,6 @@
 ENVIRONMENT = 'staging'
-# CHOREO_API = 'https://api.staging.pangea.chat'
-CHOREO_API = 'http://localhost:8000'
-# CMS_API = 'https://api.staging.pangea.chat'
-CMS_API = 'http://localhost:3000'
+CHOREO_API = 'https://api.staging.pangea.chat'
+CMS_API = 'https://api.staging.pangea.chat'
 FRONTEND_URL = 'https://app.staging.pangea.chat'
 
 SYNAPSE_URL = 'matrix.staging.pangea.chat'
