--- a/assets/.env
+++ b/assets/.env
@@ -1,5 +1,6 @@
 ENVIRONMENT = 'staging'
-CHOREO_API = 'https://api.staging.pangea.chat'
+# CHOREO_API = 'https://api.staging.pangea.chat'
+CHOREO_API = 'http://localhost:3000'
 FRONTEND_URL = 'https://app.staging.pangea.chat'
 
 SYNAPSE_URL = 'matrix.staging.pangea.chat'
