revert changes to .env file

--- a/assets/.env
+++ b/assets/.env
@@ -1,6 +1,5 @@
 ENVIRONMENT = 'staging'
-# CHOREO_API = 'https://api.staging.pangea.chat'
-CHOREO_API = 'http://localhost:3000'
+CHOREO_API = 'https://api.staging.pangea.chat'
 FRONTEND_URL = 'https://app.staging.pangea.chat'
 
 SYNAPSE_URL = 'matrix.staging.pangea.chat'
