integrate and token fix

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -96,8 +96,6 @@ jobs:
       - run: brew install sqlcipher
       - uses: moonrepo/setup-rust@v1
       - name: Add Firebase Messaging
-        run: |
-          flutter pub add fcm_shared_isolate:0.1.0
-          sed -i '' 's,//<GOOGLE_SERVICES>,,g' lib/utils/background_push.dart
+        run: ./scripts/add-firebase-messaging.sh
       - run: flutter pub get
       - run: flutter build ios --no-codesign
