--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_messaging: ^15.1.5
   flutter_dotenv: ^5.1.0
+  flutter_html: ^3.0.0
   flutter_svg: ^2.0.10+1
   get_storage: ^2.1.1
   in_app_purchase: ^3.2.1
