--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - production
-      - activity-hot-fix
 
 concurrency:
   group: release_workflow
@@ -96,7 +95,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'zulu'
+          distribution: "zulu"
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
@@ -109,7 +108,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: "3.3"
       - name: Update env files to selected environment
         run: |
           rm .env
@@ -146,32 +145,32 @@ jobs:
   build_linux:
     strategy:
       matrix:
-        arch: [ x64 ]
+        arch: [x64]
     runs-on: ubuntu-latest
     needs: create_release
     steps:
-    - uses: actions/checkout@v5
-    - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install curl clang cmake ninja-build pkg-config libgtk-3-dev libblkid-dev liblzma-dev libjsoncpp-dev cmake-data libsecret-1-dev libsecret-1-0 librhash0 libssl-dev libwebkit2gtk-4.1-dev -y
-    - name: Install Flutter
-      run: |
-        git clone --branch ${{ env.FLUTTER_VERSION }} https://github.com/flutter/flutter.git
-        ./flutter/bin/flutter doctor
-    - uses: moonrepo/setup-rust@v1
-    - run: ./flutter/bin/flutter pub get
-    - run: ./flutter/bin/flutter build linux --target-platform linux-${{ matrix.arch }}
-    - name: Create archive
-      run: tar -czf fluffychat-linux-${{ matrix.arch }}.tar.gz -C build/linux/${{ matrix.arch }}/release/bundle/ .
-    - name: Upload to release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
-      with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: pangeachat-linux-${{ matrix.arch }}.tar.gz
-        asset_name: pangeachat-linux-${{ matrix.arch }}.tar.gz
-        asset_content_type: application/gzip
+      - uses: actions/checkout@v5
+      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install curl clang cmake ninja-build pkg-config libgtk-3-dev libblkid-dev liblzma-dev libjsoncpp-dev cmake-data libsecret-1-dev libsecret-1-0 librhash0 libssl-dev libwebkit2gtk-4.1-dev -y
+      - name: Install Flutter
+        run: |
+          git clone --branch ${{ env.FLUTTER_VERSION }} https://github.com/flutter/flutter.git
+          ./flutter/bin/flutter doctor
+      - uses: moonrepo/setup-rust@v1
+      - run: ./flutter/bin/flutter pub get
+      - run: ./flutter/bin/flutter build linux --target-platform linux-${{ matrix.arch }}
+      - name: Create archive
+        run: tar -czf fluffychat-linux-${{ matrix.arch }}.tar.gz -C build/linux/${{ matrix.arch }}/release/bundle/ .
+      - name: Upload to release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+        with:
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          asset_path: pangeachat-linux-${{ matrix.arch }}.tar.gz
+          asset_name: pangeachat-linux-${{ matrix.arch }}.tar.gz
+          asset_content_type: application/gzip
 
   deploy_web:
     runs-on: ubuntu-latest
